// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`modals AlertModal renders correctly 1`] = `
<div
  className="modal style"
>
  <div
    className="overlay clickable"
    onClick={[Function]}
  />
  <div
    className="modal_contents"
  >
    <div
      className="alert_modal_contents"
    >
      <div
        className="alert_modal_heading"
      >
        heading
      </div>
      children
    </div>
    <div
      className="alert_modal_buttons"
    >
      <button
        className="button_flat"
        disabled={undefined}
        onClick={[Function]}
        title={undefined}
      >
        a
      </button>
      <button
        className="button_flat"
        disabled={undefined}
        onClick={[Function]}
        title={undefined}
      >
        b
      </button>
    </div>
  </div>
</div>
`;

exports[`modals ContinueModal renders correctly 1`] = `
<div
  className="modal"
>
  <div
    className="overlay clickable"
    onClick={[Function]}
  />
  <div
    className="modal_contents"
  >
    <div
      className="alert_modal_contents"
    >
      children
    </div>
    <div
      className="alert_modal_buttons"
    >
      <button
        className="button_flat"
        disabled={undefined}
        onClick={[Function]}
        title="Cancel"
      >
        Cancel
      </button>
      <button
        className="button_flat"
        disabled={undefined}
        onClick={[Function]}
        title="Continue"
      >
        Continue
      </button>
    </div>
  </div>
</div>
`;

exports[`modals Modal renders correctly 1`] = `
<div
  className="modal foo"
>
  <div
    className="overlay clickable"
    onClick={[Function]}
  />
  <div
    className="modal_contents"
  >
    children
  </div>
</div>
`;

exports[`modals Overlay renders correctly 1`] = `
<div
  className="overlay clickable"
  onClick={[Function]}
/>
`;
